--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "patch-package": "^8.0.1",
+    "socket.io": "^4.8.1",
     "vue": "^3.5.22"
   },
   "devDependencies": {
