--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "mongoose": "^8.20.0",
     "patch-package": "^8.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
